--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/tvaidotas/appsync-masterclass-backend#readme",
   "devDependencies": {
+    "aws-sdk": "^2.889.0",
+    "chance": "^1.1.7",
     "serverless": "2.4.0",
-    "serverless-appsync-plugin": "^1.10.0"
+    "serverless-appsync-plugin": "^1.10.0",
+    "serverless-iam-roles-per-function": "^3.1.0"
   }
 }
